Optimize docker image
Use multi-stage build to reduce image size.